--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?auto=format&fit=crop&w=1470&q=80"
+                <img src=""
                      alt="Imagen de clínica dental">
             </div>
         </div>
@@ -332,7 +332,7 @@
         </div>
         <div class="blog-grid">
             <article class="blog-card">
-                <img src="https://images.unsplash.com/photo-6228724-4b0b0c8c5e5c?auto=format&fit=crop&w=800&q=80"
+                <img src=""
                      alt="Consejo de higiene dental">
                 <div class="info">
                     <h3>5 hábitos para una boca sana</h3>
@@ -340,7 +340,7 @@
                 </div>
             </article>
             <article class="blog-card">
-                <img src="https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?auto=format&fit=crop&w=800&q=80"
+                <img src=""
                      alt="Tecnología dental">
                 <div class="info">
                     <h3>Innovaciones en implantes dentales</h3>
@@ -348,7 +348,7 @@
                 </div>
             </article>
             <article class="blog-card">
-                <img src="https://images.unsplash.com/photo-1526403227565-5a5b7c9e9c3c?auto=format&fit=crop&w=800&q=80"
+                <img src=""
                      alt="Ortodoncia estética">
                 <div class="info">
                     <h3>Ortodoncia invisible: ¿es para ti?</h3>
