--- a/index.html
+++ b/index.html
@@ -236,8 +236,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-        <img src="logo.png"
-                     alt="Logotipo Sonrisa Saludable">
+                <img src="logo.png" alt="Logotipo Sonrisa Saludable">
                 <span class="logo-text">LiaDent</span>
             </div>
 
@@ -308,21 +307,23 @@
             <p>Somos una clínica dental con más de 10 años de experiencia, comprometidos con la salud y la estética de tu sonrisa. Nuestro equipo está formado por profesionales certificados y utilizamos equipos de última generación.</p>
         </div>
     </section>
+    
+    <!-- ==== Citas ==== -->
     <section id="appointment" class="appointment">
-    <div class="section-header">
-        <p class="section-subtitle">Agendar Cita</p>
-        <h2 class="section-title">Reserva tu cita ahora</h2>
-    </div>
-    <form id="appointment-form">
-        <input type="text" name="user_name" placeholder="Nombre completo" required>
-        <input type="email" name="user_email" placeholder="Correo electrónico" required>
-        <input type="tel" name="user_phone" placeholder="Teléfono" required>
-        <input type="date" name="appointment_date" required>
-        <input type="time" name="appointment_time" required>
-        <textarea name="message" rows="5" placeholder="Mensaje o motivo de la cita" required></textarea>
-        <button type="submit">Agendar Cita</button>
-    </form>
-</section>
+        <div class="section-header">
+            <p class="section-subtitle">Agendar Cita</p>
+            <h2 class="section-title">Reserva tu cita ahora</h2>
+        </div>
+        <form id="appointment-form">
+            <input type="text" name="user_name" placeholder="Nombre completo" required>
+            <input type="email" name="user_email" placeholder="Correo electrónico" required>
+            <input type="tel" name="user_phone" placeholder="Teléfono" required>
+            <input type="date" name="appointment_date" required>
+            <input type="time" name="appointment_time" required>
+            <textarea name="message" rows="5" placeholder="Mensaje o motivo de la cita" required></textarea>
+            <button type="submit">Agendar Cita</button>
+        </form>
+    </section>
 
     <!-- ==== Blog ==== -->
     <section id="blog" class="blog">
@@ -358,7 +359,7 @@
         </div>
     </section>
 
-<!-- ==== Contacto ==== -->
+    <!-- ==== Contacto ==== -->
     <section id="contact" class="contact">
         <div class="section-header">
             <p class="section-subtitle">Contáctanos</p>
@@ -378,86 +379,92 @@
         <p>&copy; 2025 Sonrisa Saludable. Todos los derechos reservados.</p>
     </footer>
 
-</body>
-  <script src="https://cdn.emailjs.com/sdk/4.3.3/email.min.js"></script>
-<script>
-        document.addEventListener('DOMContentLoaded', (event) => {
-            const script = document.createElement('script');
-            script.src = 'https://cdn.emailjs.com/sdk/4.3.3/email.min.js';
-            script.onload = () => {
-                emailjs.init("2pXEsujV1RO63mG4C");
-
-                const form = document.getElementById('contact-form');
-                if (form) {
-                    form.addEventListener('submit', function(event) {
-                        event.preventDefault();
-                        emailjs.sendForm('service_oso1ui9', 'template_fihdexd', this)
-                            .then(() => {
-                                alert('Correo enviado con éxito');
-                                form.reset();
-                            })
-                            .catch(error => {
-                                alert('Error al enviar el correo. Inténtalo de nuevo.');
-                                console.error('Error:', error);
-                            });
-                    });
-                } else {
-                    console.error('No se encontró el formulario con el ID "contact-form".');
-                }
-            };
-            document.head.appendChild(script);
-        });
-        document.addEventListener('DOMContentLoaded', () => {
-    emailjs.init("2pXEsujV1RO63mG4C");
-
-    const appointmentForm = document.getElementById('appointment-form');
-    if (appointmentForm) {
-        appointmentForm.addEventListener('submit', (event) => {
-            event.preventDefault();
-            emailjs.sendForm('service_oso1ui9', 'template_appointment', this)
-                .then(() => {
-                    alert('Cita agendada con éxito. Nos pondremos en contacto contigo.');
-                    appointmentForm.reset();
-                })
-                .catch(error => {
-                    alert('Error al agendar la cita. Inténtalo de nuevo.');
-                    console.error('Error:', error);
-                });
-        });
-    }
-});
-    </script>
-
-    <!-- ==== Scripts ==== -->
+    <!-- Cargar EmailJS SDK -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+    
+    <!-- Scripts JavaScript -->
     <script>
-        // Smooth scroll
-        document.querySelectorAll('a[href^="#"]').forEach(a => {
-            a.addEventListener('click', e => {
-                e.preventDefault();
-                const target = document.querySelector(a.getAttribute('href'));
-                target.scrollIntoView({ behavior: 'smooth' });
+        // Inicializar EmailJS
+        (function() {
+            emailjs.init({
+                publicKey: "2pXEsujV1RO63mG4C",
+                blockHeadless: true,
+                limitRate: {
+                    throttle: 10000, // 10 segundos entre envíos
+                }
             });
-        });
+        })();
 
-        // Header shadow on scroll
-        window.addEventListener('scroll', () => {
-            const header = document.querySelector('header');
-            header.style.boxShadow = window.scrollY > 50 ?
-                '0 4px 15px rgba(0,0,0,.1)' :
-                '0 2px 10px rgba(0,0,0,.05)';
-        });
+        // Configurar formularios después de que el DOM esté cargado
+        document.addEventListener('DOMContentLoaded', function() {
+            // Formulario de contacto
+            const contactForm = document.getElementById('contact-form');
+            if (contactForm) {
+                contactForm.addEventListener('submit', function(event) {
+                    event.preventDefault();
+                    emailjs.sendForm('service_oso1ui9', 'template_fihdexd', this)
+                        .then(function() {
+                            alert('Mensaje enviado con éxito!');
+                            contactForm.reset();
+                        }, function(error) {
+                            alert('Error al enviar el mensaje. Por favor inténtalo de nuevo más tarde.');
+                            console.error('Error EmailJS:', error);
+                        });
+                });
+            }
 
-        // Hamburger toggle (mobile)
-        const hamburger = document.querySelector('.hamburger');
-        const nav = document.querySelector('nav');
+            // Formulario de citas
+            const appointmentForm = document.getElementById('appointment-form');
+            if (appointmentForm) {
+                appointmentForm.addEventListener('submit', function(event) {
+                    event.preventDefault();
+                    emailjs.sendForm('service_oso1ui9', 'template_fihdexd', this)
+                        .then(function() {
+                            alert('Cita agendada con éxito! Nos pondremos en contacto contigo.');
+                            appointmentForm.reset();
+                        }, function(error) {
+                            alert('Error al agendar la cita. Por favor inténtalo de nuevo más tarde.');
+                            console.error('Error EmailJS:', error);
+                        });
+                });
+            }
 
-        hamburger.addEventListener('click', () => {
-            nav.classList.toggle('open');
-        });
+            // Smooth scroll
+            document.querySelectorAll('a[href^="#"]').forEach(a => {
+                a.addEventListener('click', e => {
+                    e.preventDefault();
+                    const target = document.querySelector(a.getAttribute('href'));
+                    if (target) {
+                        target.scrollIntoView({ behavior: 'smooth' });
+                    }
+                });
+            });
 
-        // Cerrar menú al hacer click en un enlace (mobile)
-        nav.querySelectorAll('a').forEach(link => {
-            link.addEventListener('click', () => nav.classList.remove('open'));
+            // Header shadow on scroll
+            window.addEventListener('scroll', () => {
+                const header = document.querySelector('header');
+                if (header) {
+                    header.style.boxShadow = window.scrollY > 50 ?
+                        '0 4px 15px rgba(0,0,0,.1)' :
+                        '0 2px 10px rgba(0,0,0,.05)';
+                }
+            });
+
+            // Hamburger toggle (mobile)
+            const hamburger = document.querySelector('.hamburger');
+            const nav = document.querySelector('nav');
+
+            if (hamburger && nav) {
+                hamburger.addEventListener('click', () => {
+                    nav.classList.toggle('open');
+                });
+
+                // Cerrar menú al hacer click en un enlace (mobile)
+                nav.querySelectorAll('a').forEach(link => {
+                    link.addEventListener('click', () => nav.classList.remove('open'));
+                });
+            }
         });
     </script>
+</body>
 </html>
