--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             if (contactForm) {
                 contactForm.addEventListener('submit', function(event) {
                     event.preventDefault();
-                    emailjs.sendForm('service_oso1ui9', 'template_riji4jq', this)
+                    emailjs.sendForm('service_oso1ui9', 'template_n491aea', this)
                         .then(function() {
                             alert('Mensaje enviado con éxito!');
                             contactForm.reset();
@@ -418,7 +418,7 @@
             if (appointmentForm) {
                 appointmentForm.addEventListener('submit', function(event) {
                     event.preventDefault();
-                    emailjs.sendForm('service_oso1ui9', 'template_riji4jq', this)
+                    emailjs.sendForm('service_oso1ui9', 'template_n491aea', this)
                         .then(function() {
                             alert('Cita agendada con éxito! Nos pondremos en contacto contigo.');
                             appointmentForm.reset();
