--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
             if (appointmentForm) {
                 appointmentForm.addEventListener('submit', function(event) {
                     event.preventDefault();
-                    emailjs.sendForm('service_oso1ui9', 'template_n491aea', this)
+                    emailjs.sendForm('service_oso1ui9', 'template_6gynhr9', this)
                         .then(function() {
                             alert('Cita agendada con éxito! Nos pondremos en contacto contigo.');
                             appointmentForm.reset();
