--- a/index.html
+++ b/index.html
@@ -961,9 +961,34 @@
     </section>
 
     <!-- ==== Mapa ==== -->
-    <section id="location" class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.456286121895!2d-3.70379!3d40.41678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd42299212f32677%3A0x297d8813ed2a9f66!2sMadrid%2C%20Espa%C3%B1a!5e0!3m2!1ses!2smx!4v1690000000000!5m2!1ses!2smx" allowfullscreen="" loading="lazy"></iframe>
-    </section>
+   <!-- ==== Sección de Ubicación ==== -->
+<section id="location" class="location" style="padding: 5rem 0; background: #fff; text-align: center;">
+    <div class="section-header">
+        <p class="section-subtitle">Encuéntranos</p>
+        <h2 class="section-title">Visítanos en Nuestras Instalaciones</h2>
+        <p>Estamos ubicados en el centro de Cuernavaca, a unas cuadras del Jardín Morelos.</p>
+    </div>
+
+    <!-- Mapa de Google Maps (incrustado correctamente) -->
+    <div style="max-width: 1000px; margin: 2rem auto; border-radius: 12px; overflow: hidden; box-shadow: 0 6px 15px rgba(0,0,0,0.1);">
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.456286121895!2d-99.222227!3d18.924523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85c621f5f6d8a2d3%3A0x7a8c9a8b0f3b1c2d!2sAv.%20Morelos%20323%2C%20Centro%2C%2062000%20Cuernavaca%2C%20Mor.%2C%20M%C3%A9xico!5e0!3m2!1ses!2s!4v1700000000000!5m2!1ses!2s" 
+            width="100%" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
+
+    <!-- Información de contacto adicional (opcional) -->
+    <div style="max-width: 800px; margin: 2rem auto; padding: 0 1rem; color: var(--dark);">
+        <p><strong>Dirección:</strong> Av. Morelos 323, Centro, Cuernavaca, Morelos, México</p>
+        <p><strong>Horario:</strong> Lunes a Viernes, p:00 AM – 7:00 PM | Sábado: 10:00 AM – 5:00 PM</p>
+        <p><strong>Teléfono:</strong> <a href="tel:+52 1 777 371 1215" style="color:var(--primary);">+52 1 (777) 371 1215</a></p>
+    </div>
+</section>
 
     <!-- ==== Contacto ==== -->
     <section id="contact" class="contact">
@@ -1001,7 +1026,7 @@
     </footer>
 
     <!-- ==== WhatsApp & Chatbot ==== -->
-    <a href="https://wa.me/521234567890" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/7773711215" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
