--- a/index.html
+++ b/index.html
@@ -788,8 +788,46 @@
             .hero-container { grid-template-columns: 1fr; text-align: center; }
             .hero-content h1 { font-size: 2.4rem; }
             .hero-buttons { justify-content: center; }
-            .section-title { font-size: 2rem; }
+        }
+
+        /* ==== Mapa ==== */
+        .map {
+            background: var(--white);
+            padding: 0;
+            overflow: hidden;
+        }
+
+        .map iframe {
+            width: 100%;
+            height: 450px;
+            border: 0;
+        }
+
+        /* ==== Footer ==== */
+        footer {
+            background: var(--dark);
+            color: var(--white);
+            text-align: center;
+            padding: 3rem 0 2rem;
+            transition: background 0.4s;
+        }
+
+        .footer-content {
+            max-width: 800px;
+            margin: auto;
+            padding: 0 2rem;
+        }
+
+        /* ==== Responsive ==== */
+        @media (max-width: 768px) {
             .logo { font-size: 1.6rem; }
+            .section-title { font-size: 2rem; }
+        }
+
+        @media (max-width: 480px) {
+            .logo { font-size: 1.4rem; }
+            .logo::before { font-size: 1.5rem; }
+            .hero-content h1 { font-size: 2rem; }
         }
     </style>
 </head>
