--- a/index.html
+++ b/index.html
@@ -903,34 +903,35 @@
     </section>
 
     <!-- ==== Galería ==== -->
-    <section id="gallery" class="gallery">
-        <div class="container">
-            <div class="section-header">
-                <p class="section-subtitle">Resultados Reales</p>
-                <h2 class="section-title">Antes y Después</h2>
+   <!-- ==== Galería ==== -->
+<section id="gallery" class="gallery">
+    <div class="container">
+        <div class="section-header">
+            <p class="section-subtitle">Resultados Reales</p>
+            <h2 class="section-title">Antes y Después</h2>
+        </div>
+        <div class="filter-buttons">
+            <button class="filter-btn active" data-filter="all">Todos</button>
+            <button class="filter-btn" data-filter="blanco">Blanqueamiento</button>
+            <button class="filter-btn" data-filter="orto">Ortodoncia</button>
+            <button class="filter-btn" data-filter="implante">Implantes</button>
+        </div>
+        <div class="gallery-grid">
+            <div class="gallery-item show" data-type="blanco">
+                <img src="https://images.unsplash.com/photo-1564648897888-107882648810?auto=format&fit=crop&w=800&q=80" alt="Antes y después blanqueamiento">
+                <div class="gallery-label">Antes → Después</div>
             </div>
-            <div class="filter-buttons">
-                <button class="filter-btn active" data-filter="all">Todos</button>
-                <button class="filter-btn" data-filter="blanco">Blanqueamiento</button>
-                <button class="filter-btn" data-filter="orto">Ortodoncia</button>
-                <button class="filter-btn" data-filter="implante">Implantes</button>
+            <div class="gallery-item show" data-type="orto">
+                <img src="https://images.unsplash.com/photo-1606811971618-4486d14f3f99?auto=format&fit=crop&w=800&q=80" alt="Ortodoncia">
+                <div class="gallery-label">Antes → Después</div>
             </div>
-            <div class="gallery-grid">
-                <div class="gallery-item" data-type="blanco">
-                    <img src="https://images.unsplash.com/photo-1564648897888-107882648810?auto=format&fit=crop&w=800&q=80" alt="Antes y después blanqueamiento">
-                    <div class="gallery-label">Antes → Después</div>
-                </div>
-                <div class="gallery-item" data-type="orto">
-                    <img src="https://images.unsplash.com/photo-1606811971618-4486d14f3f99?auto=format&fit=crop&w=800&q=80" alt="Ortodoncia">
-                    <div class="gallery-label">Antes → Después</div>
-                </div>
-                <div class="gallery-item" data-type="implante">
-                    <img src="https://images.unsplash.com/photo-1598256989800-62a154c5a090?auto=format&fit=crop&w=800&q=80" alt="Implante">
-                    <div class="gallery-label">Antes → Después</div>
-                </div>
+            <div class="gallery-item show" data-type="implante">
+                <img src="https://images.unsplash.com/photo-1598256989800-62a154c5a090?auto=format&fit=crop&w=800&q=80" alt="Implante">
+                <div class="gallery-label">Antes → Después</div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- ==== Testimonios ==== -->
     <section id="testimonials" class="testimonials">
@@ -1053,7 +1054,7 @@
             <div class="social-icons">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/7773711215"><i class="fab fa-whatsapp"></i></a>
                 <a href="#"><i class="fab fa-tiktok"></i></a>
             </div>
             <button class="dark-mode-toggle" id="dark-mode-toggle">
@@ -1325,7 +1326,7 @@ const knowledge = [
         responses: [
             '¡Con gusto! Puedes agendar tu cita de dos formas:<br><br>' +
             '📅 <a href="#appointment" class="scroll-link"><strong>Formulario en línea</strong></a><br>' +
-            '📱 <a href="https://wa.me/521234567890" target="_blank"><strong>WhatsApp</strong></a><br><br>' +
+            '📱 <a href="https://wa.me/7773711215" target="_blank"><strong>WhatsApp</strong></a><br><br>' +
             '¿Prefieres que te ayude a llenar el formulario?'
         ]
     },
@@ -1345,7 +1346,7 @@ const knowledge = [
         responses: [
             'Lamentamos que tengas dolor 😣. Las emergencias las atendemos con prioridad.<br><br>' +
             '📞 <strong>Llámanos al (55) 1234-5678</strong><br>' +
-            '💬 O escríbenos por <a href="https://wa.me/521234567890" target="_blank"><strong>WhatsApp</strong></a><br><br>' +
+            '💬 O escríbenos por <a href="https://wa.me/7773711215" target="_blank"><strong>WhatsApp</strong></a><br><br>' +
             'Te atenderemos lo antes posible.'
         ]
     },
