--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
                 <div class="service-card">
                     <div class="service-icon"><i class="fas fa-teeth"></i></div>
                     <h3 class="service-title">Ortodoncia</h3>
-                    <p>Brackets y alineadores transparentes para una sonrisa perfecta.</p>
+                    <p>Brackets y alineadores para una sonrisa perfecta.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon"><i class="fas fa-teeth-open"></i></div>
@@ -1052,7 +1052,7 @@
             <div class="footer-logo">LiaDent</div>
             <p>Brindando sonrisas saludables desde 2015.</p>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=61579241372919&sk=grid"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="https://wa.me/7773711215"><i class="fab fa-whatsapp"></i></a>
                 <a href="#"><i class="fab fa-tiktok"></i></a>
@@ -1264,7 +1264,6 @@ const knowledge = [
         responses: [
             '¡Claro! Nuestra ortodoncia incluye:<br><br>' +
             '✔️ Brackets metálicos y estéticos<br>' +
-            '✔️ Alineadores transparentes (como Invisalign)<br>' +
             '✔️ Evaluación gratuita con escaneo 3D<br>' +
             '✔️ Planes de pago flexibles<br><br>' +
             '¿Quieres agendar una <a href="#appointment" class="scroll-link"><strong>cita de valoración</strong></a>?'
@@ -1307,8 +1306,8 @@ const knowledge = [
         keywords: ['horario', 'abren', 'cierran', 'atencion', 'cuando'],
         responses: [
             'Estamos abiertos:<br><br>' +
-            '📅 <strong>Lunes a Viernes</strong>: 8:00 AM - 7:00 PM<br>' +
-            '📅 <strong>Sábados</strong>: 9:00 AM - 3:00 PM<br>' +
+            '📅 <strong>Lunes a Viernes</strong>: 9:00 AM - 7:00 PM<br>' +
+            '📅 <strong>Sábados</strong>: 10:00 AM - 5:00 PM<br>' +
             '❌ <strong>Domingos</strong>: Cerrado<br><br>' +
             '¿Quieres agendar para esta semana?'
         ]
@@ -1345,7 +1344,7 @@ const knowledge = [
         keywords: ['dolor', 'muela', 'urgencia', 'emergencia', 'duele'],
         responses: [
             'Lamentamos que tengas dolor 😣. Las emergencias las atendemos con prioridad.<br><br>' +
-            '📞 <strong>Llámanos al (55) 1234-5678</strong><br>' +
+            '📞 <strong>Llámanos al 7773711215</strong><br>' +
             '💬 O escríbenos por <a href="https://wa.me/7773711215" target="_blank"><strong>WhatsApp</strong></a><br><br>' +
             'Te atenderemos lo antes posible.'
         ]
