--- a/index.html
+++ b/index.html
@@ -918,15 +918,15 @@
         </div>
         <div class="gallery-grid">
             <div class="gallery-item show" data-type="blanco">
-                <img src="https://images.unsplash.com/photo-1564648897888-107882648810?auto=format&fit=crop&w=800&q=80" alt="Antes y después blanqueamiento">
+                <img src="imagenesClinica/post.png" alt="Antes y después blanqueamiento">
                 <div class="gallery-label">Antes → Después</div>
             </div>
             <div class="gallery-item show" data-type="orto">
-                <img src="https://images.unsplash.com/photo-1606811971618-4486d14f3f99?auto=format&fit=crop&w=800&q=80" alt="Ortodoncia">
+                <img src="imagenesClinica/post.png" alt="Ortodoncia">
                 <div class="gallery-label">Antes → Después</div>
             </div>
             <div class="gallery-item show" data-type="implante">
-                <img src="https://images.unsplash.com/photo-1598256989800-62a154c5a090?auto=format&fit=crop&w=800&q=80" alt="Implante">
+                <img src="imagenesClinica/post.png" alt="Implante">
                 <div class="gallery-label">Antes → Después</div>
             </div>
         </div>
